--- a/MandelbrotSetOpenGL/MandelbrotSetOpenGL.vcxproj.filters
+++ b/MandelbrotSetOpenGL/MandelbrotSetOpenGL.vcxproj.filters
@@ -39,5 +39,8 @@
   <ItemGroup>
     <None Include="fragment.glsl" />
     <None Include="vertex.glsl" />
+    <None Include="..\..\..\GitHub\OpenGLText\textBaker\arial_48.bin">
+      <Filter>Файлы ресурсов</Filter>
+    </None>
   </ItemGroup>
 </Project>
